apps/overlays/huston/apps/searxng/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: searxng
  labels:
    app: searxng
