apps/overlays/huston/apps/searxng/searxng-ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: searxng-ingress
  namespace: searxng
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`search.markaplay.net`) || Host(`search.lab.markaplay.net`)
      kind: Rule
      services:
        - name: searxng-svc
          kind: Service
          port: 8080
  tls:
    secretName: searxng-cert
